# gtsamEx

./: CMakeLists.txt  README.md  package.xml
cfg/: gtsamConfig.cfg
config/: gtsam.rviz  param.yaml
data/: result_gtsam.csv  result_gtsam.g2o  result_gtsam_0.csv  result_gtsam_10.csv  result_gtsam_116655441.g2o  result_gtsam_4.csv  result_gtsam_4.g2o
include/: pose_graph_gtsam.h  utility.h  visualizer.h
launch/: dynamic.launch  poseGraph.launch  run_gtsam.launch
src/: ee.cpp  pose_graph_gtsam.cpp  visualizer.cpp
